Chore/group test domain exception (#302)
* Introduce erro code to group service

* Fixed property